k8s_manifests/advanced/nginx-ingress/ingress.https.yaml
#
# This is the plain HTTP version of the Smilr ingress
#
# !IMPORTANT! Change the domain names in the host/hosts sections to match your real 
# DNS zone, as created when you deployed AKS with the HTTP application routing add-on

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "smilr-ingress"
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - akseast.evillgenius.com
    secretName: tls-secret-akseast
  rules:
  - host: akseast.evillgenius.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: data-api-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 80
